Changes to the PostController to prevent duplicate Answer Submission'