@@ -13,7 +13,7 @@ import java.util.UUID;
 import android.content.Context;
 
 public abstract class PostManager {
-	protected ArrayList<Post> mPosts;
+	protected ArrayList<Post> mQuestions;
 	protected Context mContext;
 	
 	protected PostManager(Context context){
@@ -23,8 +23,8 @@ public abstract class PostManager {
 
 	// Strips 'selected' from post objects.
 	protected void clearSelected() {
-		for (int i=0; i< mPosts.size(); i++) {
-			Post item = mPosts.get(i);
+		for (int i=0; i< mQuestions.size(); i++) {
+			Post item = mQuestions.get(i);
 			item.setIsSelected(false);
 		}
 	}
@@ -39,77 +39,63 @@ public abstract class PostManager {
 		throw new InvalidPostTypeException();
 	}
 	
-	// Returns a list of the Questions in mPosts
-	// Used for saving Posts.
-	protected ArrayList<Question> castToQuestions() {
-		ArrayList<Question> questions = new ArrayList<Question>();
-		for (int i=0; i< mPosts.size(); i++) {
-			Post item = mPosts.get(i);
-			if (isQuestion(item))
-				questions.add((Question)item);
-		}
-		return questions;
-	}
+    public Post getPost(UUID uuid) {
+        for (int i=0; i< mQuestions.size(); i++) {
+            Question question = (Question)mQuestions.get(i);
+            
+            if (question.getID().equals(uuid))
+                return question;
+            
+            for (int j=0; j < question.getAnswers().size(); j++) {
+                Answer answer = question.getAnswers().get(j);
+                if (answer.getID().equals(uuid))
+                    return answer;
+            }
+        }
+        return null;
+    }
+    
+    // Given a list of Questions returns a list of Posts
+    // Used for loading.
+    protected ArrayList<Post> castToPosts(ArrayList<Question> questions) {
+        ArrayList<Post> posts = new ArrayList<Post>();
 
-	// Given a list of Questions returns a list of Posts
-	// Used for loading.
-	// -- Each Answer is added as a Post as well
-	protected ArrayList<Post> castToPosts(ArrayList<Question> questions) {
-		ArrayList<Post> posts = new ArrayList<Post>();
-		if (questions == null) 
-			posts = new ArrayList<Post>();
-
-		for (int i=0; i<questions.size(); ++i) {
-			
-			Question item = questions.get(i);
-			ArrayList<Answer> answers = item.getAnswers();
-			posts.add(item);
-			
-			for (int j=0; j<answers.size(); ++j) {
-				posts.add(answers.get(j));
-			}
-		}
-		
-		return posts;
-	}
-	
-	public Post getPost(UUID uuid) {
-		for (int i=0; i< mPosts.size(); i++) {
-			Post item = mPosts.get(i);
-			if (item.getID().equals(uuid))
-				return item;
-		}
-		return null;
-	}
-	
-   protected boolean updateIfExists(Post post) {
+        for (int i=0; i<questions.size(); ++i) {
+            
+            Question item = questions.get(i);
+            posts.add(item);
+        }
+        
+        return posts;
+    }
+    
+   /*protected boolean updateIfExists(Post post) {
        if (post == null) {
            return false;
        }
        
-        for (int i=0; i< mPosts.size(); i++) {
-            Post item = mPosts.get(i);
+        for (int i=0; i< mQuestions.size(); i++) {
+            Post item = mQuestions.get(i);
             if (item.getID() == post.getID()) {
-                mPosts.set(i, post);
+                mQuestions.set(i, post);
                 return true;
             }
         }
         return false;
-    }
+    }*/
 
-	public ArrayList<Post> getPosts(){
-		return mPosts;
+	public ArrayList<Post> getQuestions(){
+		return mQuestions;
 	}
 	
 	// adds a question to our list of posts
 	public void addQuestion(Question newQuestion){
-		mPosts.add(newQuestion);
+		mQuestions.add(newQuestion);
 	}
 	
 	// adds an answer to our list of posts
 	public void addAnswer(Question parent, Answer newAnswer){
 		parent.addAnswer(newAnswer);
-		mPosts.add(newAnswer);
 	}
 	
 	//TODO: Implement in Project Part 4
@@ -133,26 +119,26 @@ public abstract class PostManager {
 	
 	// Sorts posts by number of votes (Descending Order)
 	public void sortByScore() {
-		Collections.sort(mPosts, new Comparator<Post>() {
+		Collections.sort(mQuestions, new Comparator<Post>() {
 			  public int compare(Post lhs, Post rhs) {
-			      return (new Integer(rhs.getVotes())).compareTo(new Integer(lhs.getVotes()));
+			      return (Integer.valueOf(rhs.getVotes()).compareTo(Integer.valueOf(lhs.getVotes())));
 			  }
 		});
 	}
 	
 	// Sorts posts by most recent date first (Descending Order)
 	public void sortByDate(){
-		Collections.sort(mPosts, new Comparator<Post>() {
+		Collections.sort(mQuestions, new Comparator<Post>() {
 			  public int compare(Post lhs, Post rhs) {
-			      return rhs.getDate().compareTo(lhs.getDate());
+			      return (Integer.valueOf(rhs.getTimeStamp()).compareTo(Integer.valueOf(lhs.getTimeStamp())));
 			  }
 		});
 	}
 	
 	// Marks posts without pictures as filtered
 	public void filterOutNoPicture(){
-		for (int i=0; i< mPosts.size(); i++) {
-			Post item = mPosts.get(i);
+		for (int i=0; i< mQuestions.size(); i++) {
+			Post item = mQuestions.get(i);
 			if (!item.hasPicture())
 				item.setIsFiltered(true);
 		}
@@ -160,8 +146,8 @@ public abstract class PostManager {
 	
 	// Marks questions as filtered
 	public void filterOutQuestions(){
-		for (int i=0; i< mPosts.size(); i++) {
-			Post item = mPosts.get(i);
+		for (int i=0; i< mQuestions.size(); i++) {
+			Post item = mQuestions.get(i);
 			if (isQuestion(item))
 				item.setIsFiltered(true);
 		}
@@ -169,8 +155,8 @@ public abstract class PostManager {
 	
 	// Marks answers as filtered
 	public void filterOutAnswers(){
-		for (int i=0; i< mPosts.size(); i++) {
-			Post item = mPosts.get(i);
+		for (int i=0; i< mQuestions.size(); i++) {
+			Post item = mQuestions.get(i);
 			if (!isQuestion(item))
 				item.setIsFiltered(true);
 		}
@@ -179,8 +165,8 @@ public abstract class PostManager {
 	// Clears filters
 	// -- Should be called upon opening the Search Dialog
 	public void clearFilters(){
-		for (int i=0; i< mPosts.size(); i++) {
-			Post item = mPosts.get(i);
+		for (int i=0; i< mQuestions.size(); i++) {
+			Post item = mQuestions.get(i);
 			item.setIsFiltered(false);
 		}
 	}
